BUG#21350: No errors on using erroneus DATA DIRECTORY clause set_up_table_before_create can fail due to erroneus path to data directory or index directory Added abort handling to ensure created partitions are dropped if a failure occurs in the middle of the create process.